@@ -1,4 +1,4 @@
-MANIFEST for cm_tools, version t19970928
+MANIFEST for cm_tools, version t19980202
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for CM_TOOLS
